# winsparkle_flutter

./: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: window_configuration.cpp
ios/: winsparkle_flutter.podspec
ios/Classes/: SwiftWinsparkleFlutterPlugin.swift  WinsparkleFlutterPlugin.h  WinsparkleFlutterPlugin.m
lib/: winsparkle_flutter.dart
lib/src/: typedefs.dart  winsparkle_flutter.dart
test/: winsparkle_flutter_test.dart
windows/: CMakeCache.txt  CMakeLists.txt  winsparkle_flutter_plugin.cpp
windows/include/winsparkle_flutter/: winsparkle_flutter_plugin.h
